--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,32 @@
+.mainpanel {
+    display: table;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.mainpanel article {
+    display: table-row;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.mainpanel section {
+    display: table-cell;
+    width: 50%;
+    height: 100%;
+    margin: 0;
+    vertical-align: middle;
+    text-align: center;
+}
+
 .mainform input[type="text"], .mainform input[type="tel"] {
     font-family: Courier New, Courier, monospace;
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    margin: 1em 0;
 }
