Provide for asset serving

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,17 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
+
 .mainpanel {
     display: table;
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
+    background: url("./lp.png");
 }
 
 .mainpanel article {
