--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    background: url("./lp.png");
+    background: url("./index/background.png");
 }
 
 .mainpanel article {
